--- a/devshub_project/cards/templates/cards/card_form.html
+++ b/devshub_project/cards/templates/cards/card_form.html
@@ -9,18 +9,20 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="flex flex-1 py-4 lg:py-8">
     <div class="container mx-auto px-4 flex flex-col flex-1 justify-center items-center">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4 lg:mb-8">
         {% if not form.instance.pk %}
           {% include "includes/title.html" with text="Создать карточку" only %}
         {% else %}
-          {% include "includes/title.html" with text="Редактировать карточку" title=form.instance.question only %}
+          {% include "includes/title.html" with text="Редактировать карточку:" title=form.instance.question only %}
         {% endif %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto font-medium">
+      <!-- Form -->
+      <div class="w-full lg:max-w-5xl">
         {% include "includes/model_form.html" with form=form csrf_token=csrf_token only %}
       </div>
 
