--- a/devshub_project/decks/templates/decks/deck_form.html
+++ b/devshub_project/decks/templates/decks/deck_form.html
@@ -9,21 +9,24 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="flex flex-1 py-4 lg:py-8">
     <div class="container mx-auto px-4 flex flex-col flex-1 justify-center items-center">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4 lg:mb-8">
         {% if not form.instance.pk %}
           {% include "includes/title.html" with text="Создать колоду" only %}
         {% else %}
-          {% include "includes/title.html" with text="Редактировать колоду" title=form.instance.title only %}
+          {% include "includes/title.html" with text="Редактировать колоду:" title=form.instance.title only %}
         {% endif %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto font-medium">
-        <form method="post" class="flex flex-col gap-5">
+      <!-- Deck Form -->
+      <div class="w-full lg:max-w-5xl">
+        <form method="post" class="flex flex-col gap-2 lg:gap-4">
           {% csrf_token %}
 
+          <!-- Non field errors -->
           {% if form.non_field_errors %}
             <ul class="errorlist">
               {% for error in form.non_field_errors %}
@@ -34,8 +37,11 @@
 
           <!-- Title -->
           <div>
+
             {{ form.title.label_tag }}
             {{ form.title }}
+
+            <!-- Title errors -->
             {% if form.title.errors %}
               <ul class="errorlist mb-2">
                 {% for error in form.title.errors %}
@@ -43,22 +49,24 @@
                 {% endfor %}
               </ul>
             {% endif %}
+
           </div>
 
           <!-- Cards -->
           <div>
+
             {{ form.cards.label_tag }}
 
             <select name="{{ form.cards.name }}" id="{{ form.cards.id_for_label }}" multiple class="w-full border-gray-300 rounded-md shadow min-h-96 resize-y">
               <option value="" disabled>Выберите карточки</option>
               {% for value, label in form.cards.field.choices %}
-                <option value="{{ value }}" {% if value in form.cards.value %}selected{% endif %} class="hover:bg-gray-100 py-1 hover:text-blue-600 font-medium">
+                <option value="{{ value }}" {% if value in form.cards.value %}selected{% endif %} class="hover:bg-gray-100 py-1 hover:text-blue-600 active:text-blue-600 font-medium">
                   {{ label|truncatechars:80|striptags }}
                 </option>
               {% endfor %}
             </select>
 
-
+            <!-- Cards errors -->
             {% if form.cards.errors %}
               <ul class="errorlist mb-2">
                 {% for error in form.cards.errors %}
@@ -66,17 +74,18 @@
                 {% endfor %}
               </ul>
             {% endif %}
+          </div>
 
+          <!-- Save button -->
           <div>
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+              {% if not form.instance.pk %}Создать{% else %}Сохранить{% endif %}
+            </button>
+          </div>
 
-          <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
-            {% if not form.instance.pk %}Создать{% else %}Сохранить{% endif %}
-          </button>
-        </div>
+        </form>
+      </div>
 
-      </form>
     </div>
-
   </div>
-</div>
 {% endblock content %}
