--- a/devshub_project/templates/includes/pagination.html
+++ b/devshub_project/templates/includes/pagination.html
@@ -1,20 +1,20 @@
 {% if page_obj.paginator.num_pages > 1 %}
-<div class="flex gap-4 justify-center items-center font-medium">
-  {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
-  {% endif %}
-
-  {% for num in page_obj.paginator.page_range %}
-    {% if num >= page_obj.number|add:-2 and num <= page_obj.number|add:2 %}
-      <a href="?page={{ num }}&query={{ query }}&sort_by={{ sort_by }}"
-         class="{% if num == page_obj.number %}font-semibold text-blue-600{% else %}hover:text-blue-600{% endif %}">
-        {{ num }}
-      </a>
-    {% endif %}
-  {% endfor %}
-
-  {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
-  {% endif %}
-</div>
+  <div class="pt-8">
+    <div class="flex gap-4 justify-center items-center">
+      {% if page_obj.has_previous %}
+        <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+      {% endif %}
+      {% for num in page_obj.paginator.page_range %}
+        {% if num >= page_obj.number|add:-2 and num <= page_obj.number|add:2 %}
+          <a href="?page={{ num }}&query={{ query }}&sort_by={{ sort_by }}"
+            class="{% if num == page_obj.number %}font-medium text-blue-600{% else %}hover:text-blue-600 active:text-blue-600{% endif %}">
+            {{ num }}
+          </a>
+        {% endif %}
+      {% endfor %}
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+      {% endif %}
+    </div>
+  </div>
 {% endif %}
