--- a/devshub_project/cards/templates/cards/card_detail.html
+++ b/devshub_project/cards/templates/cards/card_detail.html
@@ -6,53 +6,75 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-10">
-        {% if card.author == request.user %}
-          <div class="max-w-5xl mx-auto flex gap-4 justify-center items-center">
-            <a href="{% url "card_update" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary mb-2">Редактировать карточку</a>
-            <a href="{% url "card_export" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success mb-2">Экспортировать карточку</a>
-            <a href="{% url "card_delete" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger mb-2">Удалить карточку</a>
-          </div>
-        {% else %}
-          <form action="{% url "card_toggle_save" card.id %}" method="post" data-js-toggle-save-form>
-            {% csrf_token %}
-            <div class="max-w-5xl mx-auto flex gap-4 justify-center items-center">
+      <!-- Action buttons -->
+      {% if request.user.is_authenticated %}
+        <div class="mb-8">
+
+          <!-- Author buttons -->
+          {% if card.author == request.user %}
+            <div class="flex flex-wrap lg:flex-nowrap gap-2 lg:gap-4 justify-center items-center max-w-xl lg:max-w-5xl mx-auto">
+              <a href="{% url "card_update" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary">Редактировать карточку</a>
+              <a href="{% url "card_export" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success">Экспортировать карточку</a>
+              <a href="{% url "card_delete" card.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger">Удалить карточку</a>
+            </div>
+          <!-- User buttons -->
+          {% else %}
+            <form action="{% url "card_toggle_save" card.pk %}" method="post" data-js-toggle-save-form class="flex flex-wrap lg:flex-nowrap gap-2 lg:gap-4 justify-center items-center max-w-xl lg:max-w-5xl mx-auto">
+              {% csrf_token %}
+
+              <!-- If not saved-->
               {% if not is_saved %}
-                <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium primary transition-colors cursor-pointer">
+
+                <button type="submit" data-js-toggle-button class="w-full text-center rounded-full py-4 px-6 text-md font-medium cursor-pointer primary">
                   Сохранить карточку в мой профиль
                 </button>
-                <a href="{% url "card_export" card.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success inactive mb-2">Экспортировать карточку</a>
+                <a href="{% url "card_export" card.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success inactive">Экспортировать карточку</a>
+
+              <!-- If saved-->
               {% else %}
-                <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium danger transition-colors cursor-pointer">
+
+                <button type="submit" data-js-toggle-button class="w-full text-center rounded-full py-4 px-6 text-md font-medium cursor-pointer danger">
                   Удалить карточку из моего профиля
                 </button>
-                <a href="{% url "card_export" card.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success mb-2">Экспортировать карточку</a>
+                <a href="{% url "card_export" card.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success">Экспортировать карточку</a>
               {% endif %}
-            </div>
-          </form>
-        {% endif %}
-      </div>
 
-      <div class="prose mx-auto text-lg mb-auto">
-        <div class="mb-8 font-medium">
+            </form>
+          {% endif %}
+
+        </div>
+      {% endif %}
+
+      <!-- Card content -->
+      <div class="prose sm:mx-auto text-lg mb-auto">
+
+        <!-- Card question -->
+        <div class="mb-8 font-medium text-center">
           {{ card.question|safe }}
         </div>
+
+        <!-- Card answer -->
         <div>
           {{ card.answer|safe }}
         </div>
+
       </div>
 
-      <div class="text-center text-lg font-medium">
+      <!-- Card Author -->
+      <div class="text-center text-lg">
+
         <a href="{{ card.author.get_absolute_url }}" class="group">
-          Автор: <span class="group-hover:text-blue-600 transition-colors">{{ card.author }}</span>
+          Автор: <span class="font-medium group-hover:text-blue-600 active:text-blue-600">{{ card.author }}</span>
         </a>
+
       </div>
 
+    </div>
   </div>
-</div>
 
 {% endblock content %}
 
