--- a/devshub_project/cards/templates/cards/card_list.html
+++ b/devshub_project/cards/templates/cards/card_list.html
@@ -1,26 +1,29 @@
 {% extends "base.html" %}
+{% load card_tags %}
 
 {% block title %}Список карточек{% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4">
         {% include "includes/title.html" with text="Список карточек" only %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto mb-8">
+      <!-- Search form -->
+      <div class="w-full lg:max-w-3xl mx-auto mb-4">
         {% include "includes/search_form.html" with placeholder="Что такое итератор?" request=request only %}
       </div>
 
+      <!-- Deck list -->
       <div class="mb-auto">
         {% include "includes/card_list.html" with cards=cards user=request.user only %}
       </div>
 
-      <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=cards query=query sort_by=sort_by only %}
-      </div>
+      <!-- Pagination -->
+      {% include "includes/pagination.html" with page_obj=cards query=query sort_by=sort_by only %}
 
     </div>
   </div>
