--- a/devshub_project/decks/templates/decks/deck_detail.html
+++ b/devshub_project/decks/templates/decks/deck_detail.html
@@ -8,51 +8,72 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-10">
-        {% if deck.author == request.user %}
-          <div class="max-w-5xl mx-auto flex gap-4 justify-center items-center">
-            <a href="{% url "deck_update" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary mb-2">Редактировать колоду</a>
-            <a href="{% url "deck_export" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success mb-2">Экспортировать колоду</a>
-            <a href="{% url "deck_delete" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger mb-2">Удалить колоду</a>
-          </div>
-        {% else %}
-          <form action="{% url "deck_toggle_save" deck.id %}" method="post" data-js-toggle-save-form>
-            {% csrf_token %}
-            <div class="max-w-5xl mx-auto flex gap-4 justify-center items-center">
+      <!-- Action buttons -->
+      {% if request.user.is_authenticated %}
+        <div class="mb-8">
+
+          <!-- Author buttons -->
+          {% if deck.author == request.user %}
+            <div class="flex flex-wrap lg:flex-nowrap gap-2 lg:gap-4 justify-center items-center max-w-xl lg:max-w-5xl mx-auto">
+              <a href="{% url "deck_update" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary">Редактировать колоду</a>
+              <a href="{% url "deck_export" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success">Экспортировать колоду</a>
+              <a href="{% url "deck_delete" deck.pk %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger">Удалить колоду</a>
+            </div>
+          <!-- User buttons -->
+          {% else %}
+            <form action="{% url "deck_toggle_save" deck.pk %}" method="post" data-js-toggle-save-form class="flex flex-wrap lg:flex-nowrap gap-2 lg:gap-4 justify-center items-center max-w-xl lg:max-w-5xl mx-auto">
+              {% csrf_token %}
+
+              <!-- If not saved-->
               {% if not is_saved %}
-                <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium primary transition-colors cursor-pointer">
+
+                <button type="submit" data-js-toggle-button class="w-full text-center rounded-full py-4 px-6 text-md font-medium cursor-pointer primary">
                   Сохранить колоду в мой профиль
                 </button>
                 <a href="{% url "deck_export" deck.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success inactive">Экспортировать колоду</a>
+
+              <!-- If saved-->
               {% else %}
-                <button type="submit" data-js-toggle-button class="w-full rounded-full py-4 px-6 text-md font-medium danger transition-colors cursor-pointer">
+
+                <button type="submit" data-js-toggle-button class="w-full text-center rounded-full py-4 px-6 text-md font-medium cursor-pointer danger">
                   Удалить колоду из моего профиля
                 </button>
-                <a href="{% url "deck_export" deck.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success mb-2">Экспортировать колоду</a>
+                <a href="{% url "deck_export" deck.pk %}" data-js-export-button class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium success">Экспортировать колоду</a>
               {% endif %}
-            </div>
-          </form>
-        {% endif %}
-      </div>
 
-      <div class="mb-8">
+            </form>
+          {% endif %}
+
+        </div>
+      {% endif %}
+
+      <!-- Title -->
+      <div class="mb-4">
         {% include "includes/title.html" with text="Список карточек" title=deck.title only %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto mb-8">
+      <!-- Search form -->
+      <div class="w-full lg:max-w-3xl mx-auto mb-4">
         {% include "includes/search_form.html" with placeholder="Что такое итератор?" request=request only %}
       </div>
 
+      <!-- Card list -->
       <div class="mb-auto">
         {% include "includes/card_list.html" with cards=cards user=request.user only %}
       </div>
 
-      <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=cards query=query sort_by=sort_by only %}
+      <!-- Deck Author -->
+      <div class="text-center text-lg">
+        <a href="{{ deck.author.get_absolute_url }}" class="group">
+          Автор: <span class="font-medium group-hover:text-blue-600 active:text-blue-600">{{ deck.author }}</span>
+        </a>
       </div>
+
+      <!-- Pagination -->
+      {% include "includes/pagination.html" with page_obj=cards query=query sort_by=sort_by only %}
 
   </div>
 </div>
