--- a/devshub_project/projects/templates/projects/project_list.html
+++ b/devshub_project/projects/templates/projects/project_list.html
@@ -3,24 +3,25 @@
 {% block title %}Список проектов{% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4">
         {% include "includes/title.html" with text="Список проектов" only %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto mb-8">
+      <!-- Search form -->
+      <div class="w-full lg:max-w-3xl mx-auto mb-4">
         {% include "includes/search_form.html" with placeholder="Сервис сокращения ссылок на FastAPI" request=request only %}
       </div>
 
+      <!-- Project list -->
       <div class="mb-auto">
         {% include "includes/project_list.html" with projects=projects user=request.user only %}
       </div>
 
-      <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=projects query=query sort_by=sort_by only %}
-      </div>
+      {% include "includes/pagination.html" with page_obj=projects query=query sort_by=sort_by only %}
 
     </div>
   </div>
