--- a/devshub_project/templates/footer.html
+++ b/devshub_project/templates/footer.html
@@ -1,7 +1,7 @@
 <footer class="py-4 bg-gray-100">
-  <div class="container mx-auto px-4 text-center text-md font-medium">
+  <div class="container mx-auto px-4 text-center">
     <span>© {% now "Y" %}
-      <a href="https://github.com/romanovsqd" target="_blank" class="text-blue-500 hover:text-blue-600 transition-colors">
+      <a href="https://github.com/romanovsqd" target="_blank" class="font-medium text-blue-500 hover:text-blue-600 active:text-blue-600 transition-colors">
         romanovsqd</a>.
       All rights reserved.
     </span>
