--- a/devshub_project/templates/includes/deck_list.html
+++ b/devshub_project/templates/includes/deck_list.html
@@ -1,14 +1,53 @@
 {% load deck_tags %}
 
-<div class="flex gap-4 py-2 px-4 text-gray-500">
-  <p class="flex-2">Тема колоды</p>
-  <p class="flex-1 pl-4">Автор</p>
-  <p class="flex-1 text-right pr-4">Статус</p>
+<!-- Deck list as table -->
+<div class="hidden sm:table">
+
+  <!-- Deck table -->
+  <table class="w-full table-fixed text-gray-500">
+
+    <colgroup>
+      <col class="max-w-2/4 lg:max-w-1/3 w-full">
+      <col class="max-w-1/4 lg:max-w-1/3 w-full">
+      <col class="max-w-1/4 lg:max-w-1/3 w-full">
+    </colgroup>
+
+    <!-- Deck table head-->
+    <thead>
+      <tr>
+        <th class="text-left py-2 px-4 font-normal">
+          Название
+        </th>
+        <th class="text-center py-2 px-4 font-normal">
+          Автор
+        </th>
+        <th class="text-right py-2 px-4 font-normal">
+          {% if studying_decks_ids %}
+            <span class="pr-9 md:pr-14 lg:pr-18">Статус</span>
+          {% else %}
+            <span class="pr-8">Статус</span>
+          {% endif %}
+        </th>
+      </tr>
+    </thead>
+
+    <!-- Deck table body-->
+    <tbody class="divide-y divide-gray-300">
+
+      <!-- Decks -->
+      {% for deck in decks %}
+        {% render_deck_as_table deck=deck user=user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
+      {% endfor %}
+
+    </tbody>
+
+  </table>
+
 </div>
-<ul class="divide-y divide-gray-300">
+
+<!-- Deck list as decks -->
+<div class="flex flex-col gap-4 sm:hidden">
   {% for deck in decks %}
-    <li>
-      {% render_deck deck=deck user=user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
-    </li>
+    {% render_deck deck=deck user=user is_owner=is_owner studying_decks_ids=studying_decks_ids %}
   {% endfor %}
-</ul>
+</div>
