--- a/devshub_project/templates/includes/model_form.html
+++ b/devshub_project/templates/includes/model_form.html
@@ -1,16 +1,12 @@
-<form method="post" {% if has_file_field %}enctype="multipart/form-data"{% endif %} class="flex flex-col gap-5">
+<form method="post" {% if has_file_field %}enctype="multipart/form-data"{% endif %} class="flex flex-col gap-2 lg:gap-4">
   {% csrf_token %}
 
   {{ form.media }}
   {{ form }}
 
   <div>
-    <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
-      {% if not form.instance.pk %}
-        Создать
-      {% else %}
-        Сохранить
-      {% endif %}
+    <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 active:bg-blue-600 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+      {% if not form.instance.pk %}Создать{% else %}Сохранить{% endif %}
     </button>
   </div>
 
