--- a/devshub_project/templates/includes/search_form.html
+++ b/devshub_project/templates/includes/search_form.html
@@ -1,4 +1,4 @@
-<form method="get" class="flex gap-4 font-medium">
+<form method="get" class="flex flex-col sm:flex-row gap-2 lg:gap-4">
   <input
     type="text"
     name="query"
@@ -12,8 +12,7 @@
   </select>
   <button
     type="submit"
-    class="py-2 px-4 border border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer flex-1 shadow"
-  >
+    class="py-2 px-4 border border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer flex-1 shadow">
     Найти
   </button>
 </form>
