--- a/devshub_project/templates/includes/title.html
+++ b/devshub_project/templates/includes/title.html
@@ -1,4 +1,4 @@
-<h1 class="text-2xl font-semibold text-center text-shadow-sm">
+<h1 class="text-2xl font-semibold text-center text-shadow-xs">
   {{ text }} {{ title|striptags|truncatechars:40 }}
 </h1>
 
