--- a/devshub_project/users/templates/registration/login.html
+++ b/devshub_project/users/templates/registration/login.html
@@ -1,34 +1,46 @@
 {% extends "base.html" %}
 
-{% block title %}Авторизация{% endblock title %}
+{% block title %}Вход{% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
-    <div class="container mx-auto px-4 flex flex-col flex-1">
+  <div class="flex flex-col flex-1 py-4 lg:py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1 justify-center items-center">
 
-      <div class="mb-8">
-        {% include "includes/title.html" with text="Авторизация" only %}
-      </div>
-      <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
-        <form method="post">
+      <!-- LogIn form container -->
+      <div class="w-full md:max-w-xl mx-auto mb-4 lg:mb-8 p-8 rounded-lg shadow-xl">
+
+        <!-- Title -->
+        <div class="mb-4">
+          {% include "includes/title.html" with text="Вход" only %}
+        </div>
+
+        <!-- LogIn form -->
+        <form method="post" class="flex flex-col gap-2 lg:gap-4">
           {% csrf_token %}
           {{ form }}
-          <div class="font-medium mb-2 flex justify-between gap-4">
-            <a href="{% url "register" %}" class="inline-block group">
-              Нет аккаунта? <span class="text-blue-600 group-hover:text-blue-700 transition-colors">Регистрация</span>
-            </a>
-            <a href="{% url "password_reset" %}" class="inline-block group">
-              Забыли пароль? <span class="text-blue-600 group-hover:text-blue-700 transition-colors">Восстановить</span>
-            </a>
-          </div>
+
+          <!-- LogIn button -->
           <div>
-            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
                 Войти
             </button>
           </div>
+
+          <!-- Links -->
+          <div class="flex flex-col md:flex-row text-center md:text-left flex-wrap justify-between gap-2 lg:gap-4">
+
+            <a href="{% url "register" %}" class="inline-block group">
+              Нет аккаунта? <span class="font-medium text-blue-500 group-hover:text-blue-600 active:text-blue-600 transition-colors">Зарегистрироваться</span>
+            </a>
+
+            <a href="{% url "password_reset" %}" class="inline-block group">
+              Забыли пароль? <span class="font-medium text-blue-500 group-hover:text-blue-600 active:text-blue-600 transition-colors">Восстановить</span>
+            </a>
+
+          </div>
+
         </form>
       </div>
-
 
     </div>
   </div>
