--- a/devshub_project/users/templates/registration/password_reset_confirm.html
+++ b/devshub_project/users/templates/registration/password_reset_confirm.html
@@ -7,13 +7,20 @@
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
       {% if form %}
-        <div class="mb-8">
-          {% include "includes/title.html" with text="Восстановления пароля" only %}
-        </div>
-        <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
-          <form method="post">
+
+        <!-- Password confirm form container -->
+        <div class="w-full md:max-w-xl mx-auto mb-4 lg:mb-8 p-8 rounded-lg shadow-xl">
+
+          <!-- Title -->
+          <div class="mb-8">
+            {% include "includes/title.html" with text="Восстановления пароля" only %}
+          </div>
+
+          <!-- Password confirm form -->
+          <form method="post" class="flex flex-col gap-2 lg:gap-4">
             {% csrf_token %}
 
+            <!-- Non field errors -->
             {% if form.non_field_errors %}
               <ul class="errorlist">
                 {% for error in form.non_field_errors %}
@@ -24,11 +31,14 @@
 
             <!-- New password1 -->
             <div>
+
               {{ form.new_password1.label_tag }}
               {{ form.new_password1}}
-              <span class="mt-1 inline-block w-full text-sm text-gray-500">
+              <span class="mt-1 inline-block w-full text-xs md:text-sm text-gray-500">
                 {{ form.new_password1.help_text }}
               </span>
+
+              <!-- New password1 errors -->
               {% if form.new_password1.errors %}
                 <ul class="errorlist mb-2">
                   {% for error in form.new_password1.errors %}
@@ -36,36 +46,44 @@
                   {% endfor %}
                 </ul>
               {% endif %}
+
             </div>
 
             <!-- New password2 -->
             <div>
+
               {{ form.new_password2.label_tag }}
               {{ form.new_password2}}
-              <span class="inline-block w-full text-sm text-gray-500">
+              <span class="mt-2 inline-block w-full text-xs md:text-sm text-gray-500">
                 {{ form.new_password2.help_text }}
               </span>
+
+              <!-- New password2 errors -->
               {% if form.new_password2.errors %}
                 <ul class="errorlist mb-2">
-                  {% for error in form.new_password2.errors %}
+                  {% for error in form.new_password1.errors %}
                     <li>{{ error }}</li>
                   {% endfor %}
                 </ul>
               {% endif %}
+
             </div>
 
             <div>
-              <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+              <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
                 Изменить пароль
               </button>
             </div>
 
           </form>
         </div>
+
       {% else %}
-        <div class="mb-8">
+
+        <div>
           {% include "includes/title.html" with text="Срок действия токена истек" only %}
         </div>
+
       {% endif %}
     </div>
   </div>
