--- a/devshub_project/users/templates/registration/password_reset_done.html
+++ b/devshub_project/users/templates/registration/password_reset_done.html
@@ -3,10 +3,10 @@
 {% block title %}Восстановление пароля{% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
-    <div class="container mx-auto px-4 flex flex-col flex-1">
+  <div class="flex flex-col flex-1 py-4 lg:py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1 justify-center items-center">
 
-      <div class="mb-8">
+      <div>
         {% include "includes/title.html" with text="Если аккаунт с таким email существует, на него отправлено письмо с инструкциями по сбросу пароля" only %}
       </div>
 
