--- a/devshub_project/users/templates/registration/password_reset_form.html
+++ b/devshub_project/users/templates/registration/password_reset_form.html
@@ -3,23 +3,31 @@
 {% block title %}Восстановление пароля{% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
-    <div class="container mx-auto px-4 flex flex-col flex-1">
+  <div class="flex flex-col flex-1 py-4 lg:py-8">
+    <div class="container mx-auto px-4 flex flex-col flex-1 justify-center items-center">
 
-      <div class="mb-8">
-        {% include "includes/title.html" with text="Восстановления пароля" only %}
-      </div>
+      <!-- Reset password form container -->
+      <div class="w-full md:max-w-xl mx-auto mb-4 lg:mb-8 p-8 rounded-lg shadow-xl">
 
-      <div class="max-w-1/2 w-full mx-auto font-medium mb-10">
-        <form method="post">
+        <!-- Title -->
+        <div class="mb-4">
+          {% include "includes/title.html" with text="Восстановления пароля" only %}
+        </div>
+
+        <!-- Reset password form -->
+        <form method="post" class="flex flex-col gap-2 lg:gap-4">
           {% csrf_token %}
           {{ form }}
-          <div class="mt-2">
-            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
+
+          <!-- Send email button -->
+          <div>
+            <button type="submit" class="py-2 px-4 border w-full border-gray-300 rounded-md bg-blue-500 hover:bg-blue-600 active:bg-blue-600 transition-colors text-white text-shadow-md cursor-pointer shadow">
                 Отправить письмо для восстановления пароля
             </button>
           </div>
+
         </form>
+
       </div>
 
     </div>
