--- a/devshub_project/users/templates/users/user_cards.html
+++ b/devshub_project/users/templates/users/user_cards.html
@@ -5,28 +5,33 @@
 {% endblock title %}
 
 {% block content %}
-  <div class="flex flex-col flex-1 py-8">
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4">
         {% include "includes/title.html" with text="Карточки" title=user.username only %}
       </div>
 
-      <div class="mb-8">
-        <a href="{% url "card_create" %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary mb-2">Добавить карточку</a>
-      </div>
+      <!-- Create card link -->
+      {% if request.user == user %}
+        <div class="w-full lg:max-w-3xl mx-auto mb-4">
+          <a href="{% url "card_create" %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium primary">Добавить карточку</a>
+        </div>
+      {% endif %}
 
-      <div class="max-w-1/2 w-full mx-auto mb-8">
+      <!-- Search form -->
+      <div class="w-full lg:max-w-3xl mx-auto mb-4">
         {% include "includes/search_form.html" with placeholder="Что такое итератор?" request=request only %}
       </div>
 
+      <!-- Card list -->
       <div class="mb-auto">
         {% include "includes/card_list.html" with cards=user_cards user=request.user only %}
       </div>
 
-      <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=user_cards query=query sort_by=sort_by only %}
-      </div>
+      <!-- Pagination -->
+      {% include "includes/pagination.html" with page_obj=user_cards query=query sort_by=sort_by only %}
 
     </div>
   </div>
