--- a/devshub_project/users/templates/users/user_detail.html
+++ b/devshub_project/users/templates/users/user_detail.html
@@ -8,32 +8,28 @@
 
 {% block content %}
 
-  <div class="flex flex-col flex-1">
+  <div class="py-4 lg:py-8 flex">
     <div class="container mx-auto px-4 flex flex-col">
 
-      <div class="py-4">
-        <div class="mb-2">
+      <!-- Profile header -->
+      <div class="flex flex-col gap-4 mb-4">
+
+        <!-- Title -->
+        <div>
           {% include "includes/title.html" with text="Профиль" title=user.username only %}
         </div>
+
+        <!-- Profile avatar -->
         {% if user.avatar %}
-        {% thumbnail user.avatar "240x240" crop="center" as avatar %}
-        <div>
-          <div class="mx-auto rounded-full overflow-hidden max-w-60 max-h-60 shadow-md shadow-gray-400">
-            <img src="{{ avatar.url }}" alt="" class="w-full h-full rounded-full object-cover object-center">
+          {% thumbnail user.avatar "240x240" crop="center" as avatar %}
+          <div class="relative max-w-60 w-full mx-auto aspect-square rounded-full overflow-hidden shadow-md shadow-gray-400">
+            <img src="{{ avatar.url }}" alt="Аватар {{ user.username }}" class="absolute inset-0 w-full h-full object-cover object-center rounded-full" loading="lazy">
           </div>
-        </div>
         {% endif %}
-      </div>
 
-      <div class="py-4">
-
-        <div class="mb-4">
-          <h2 class="text-2xl text-center text-gray-700 font-semibold">
-            Статистика пользователя
-          </h2>
-        </div>
-        <div class="mb-4">
-          <div class="flex justify-center items-center gap-10 text-lg text-gray-700 mb-8">
+        <!-- User links -->
+        <div>
+          <div class="flex flex-wrap lg:flex-nowrap gap-2 lg:gap-4 justify-center items-center max-w-lg lg:max-w-5xl mx-auto">
             {% if user.codewars_username %}
               <a href="https://www.codewars.com/users/{{user.codewars_username}}" target="_blank" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium danger shadow-xs shadow-red-200 text-shadow-xs text-shadow-red-200">Профиль codewars</a>
             {% endif %}
@@ -42,11 +38,23 @@
             <a href="{% url "user_projects" user.id %}" class="inline-block w-full text-center rounded-full py-4 px-6 text-md font-medium warning shadow-xs shadow-orange-200 text-shadow-xs text-shadow-orange-200">Проекты</a>
           </div>
         </div>
-        <div class="mb-4">
-          <div class="max-w-xl mx-auto">
+
+      </div>
+
+      <!-- Profile stats -->
+      <div class="flex flex-col gap-4 lg:gap-6">
+
+        <!-- Stats title -->
+        <div>
+          <h2 class="text-xl text-center text-gray-700 font-semibold">
+            Статистика пользователя
+          </h2>
+        </div>
+
+        <!-- Stats canvas -->
+        <div>
+          <div class="max-w-lg w-full mx-auto">
             <canvas
-              width="500"
-              height="500"
               data-js-stats-canvas
               data-js-total-completed-katas="{{ codewars_stats.total_completed_katas }}"
               data-js-cards-in-study="{{ cards_stats.in_study }}"
@@ -55,46 +63,58 @@
             </canvas>
           </div>
         </div>
+
+        <!-- Stats detail -->
         <div>
-          <div class="grid {% if user.codewars_username %}grid-cols-4{% else %}grid-cols-3{% endif %} font-medium text-lg">
+          <div class="grid {% if user.codewars_username %}grid-cols-1 lg:grid-cols-4{% else %}grid-cold-1 lg:grid-cols-3{% endif %} gap-4 max-w-lg lg:max-w-5xl mx-auto text-center">
+
+            <!-- Codewars stats -->
             {% if user.codewars_username %}
-              <div class="flex justify-center">
-                <ul class="flex flex-col gap-y-2">
+              <div class="p-2 flex justify-center danger hover:bg-red-50 border-2 border-red-300 rounded-xl shadow-xs shadow-red-200 text-shadow-xs text-shadow-red-200">
+                <ul class="flex flex-col justify-center">
                   <li>
                     <a href="https://www.codewars.com/users/{{user.codewars_username}}" target="_blank" class="group">
-                      Codewars аккаунт: <span class="text-blue-600">{{ user.codewars_username }}</span>
+                      Codewars аккаунт: <span class="font-medium hover:text-red-600 active:text-red-600">{{ user.codewars_username }}</span>
                     </a>
                   </li>
-                  <li>Очки (honor): {{ codewars_stats.honor }}</li>
                   <li>Позиция в топе: {{ codewars_stats.leaderboard_position }}</li>
-                  <li>Языки: {{ codewars_stats.languages|join:', ' }}</li>
                   <li>Решенных здач: {{ codewars_stats.total_completed_katas }}</li>
+                  <li>Языки: {{ codewars_stats.languages|join:', ' }}</li>
+                  <li>Очки (honor): {{ codewars_stats.honor }}</li>
                 </ul>
               </div>
             {% endif %}
-            <div class="flex justify-center">
-              <ul class="flex flex-col gap-y-2">
-                <li>Всего карточек: {{ cards_stats.total }}</li>
-                <li>Создано карточек: {{ cards_stats.created }}</li>
+
+            <!-- Cards stats -->
+            <div class="p-2 flex justify-center primary hover:bg-blue-50 border-2 border-blue-300 rounded-xl shadow-xs shadow-blue-200 text-shadow-xs text-shadow-blue-200">
+              <ul class="flex flex-col justify-center">
+                <li>Добавлено карточек: {{ cards_stats.created }}</li>
                 <li>Сохранено карточек: {{ cards_stats.saved }}</li>
+                <li>Всего карточек: {{ cards_stats.total }}</li>
                 <li>В изучении: {{ cards_stats.in_study }}</li>
               </ul>
             </div>
-            <div class="flex justify-center">
-              <ul class="flex flex-col gap-y-2">
-                <li>Всего колод: {{ decks_stats.total }}</li>
-                <li>Создано колод: {{ decks_stats.created }}</li>
+
+            <!-- Decks stats -->
+            <div class="p-2 flex justify-center success hover:bg-green-50 border-2 border-green-300 rounded-xl shadow-xs shadow-green-200 text-shadow-xs text-shadow-green-200">
+              <ul class="flex flex-col justify-center">
+                <li>Добавлено колод: {{ decks_stats.created }}</li>
                 <li>Сохранено колод: {{ decks_stats.saved }}</li>
+                <li>Всего колод: {{ decks_stats.total }}</li>
                 <li>В изучении: {{ decks_stats.in_study }}</li>
               </ul>
             </div>
-            <div class="flex justify-center">
-              <ul class="flex flex-col gap-y-2">
-                <li>Всего проектов: {{ projects_stats.total }}</li>
+
+            <!-- Projects stats -->
+            <div class="p-2 flex justify-center warning hover:bg-orange-50 border-2 border-orange-300 rounded-xl shadow-xs shadow-orange-200 text-shadow-xs text-shadow-orange-200">
+              <ul class="flex flex-col justify-center">
+                <li>Добавлено проектов: {{ projects_stats.total }}</li>
               </ul>
             </div>
+
           </div>
         </div>
+
       </div>
 
     </div>
