--- a/devshub_project/users/templates/users/user_list.html
+++ b/devshub_project/users/templates/users/user_list.html
@@ -3,25 +3,25 @@
 {% block title %}Список пользователей{% endblock title %}
 
 {% block content %}
-
-  <div class="flex flex-col flex-1 py-8">
+  <div class="py-4 lg:py-8 flex flex-1">
     <div class="container mx-auto px-4 flex flex-col flex-1">
 
-      <div class="mb-8">
+      <!-- Title -->
+      <div class="mb-4">
         {% include "includes/title.html" with text="Список пользователей" only %}
       </div>
 
-      <div class="max-w-1/2 w-full mx-auto mb-8">
+      <!-- Search form -->
+      <div class="w-full lg:max-w-3xl mx-auto mb-4">
         {% include "includes/search_form.html" with placeholder="Имя пользователя, направление или навык" request=request only %}
       </div>
 
-      <div>
+      <!-- User list -->
+      <div class="mb-auto">
         {% include "includes/user_list.html" with users=users only %}
       </div>
 
-      <div class="pt-8">
-        {% include "includes/pagination.html" with page_obj=users query=query sort_by=sort_by only %}
-      </div>
+      {% include "includes/pagination.html" with page_obj=users query=query sort_by=sort_by only %}
 
     </div>
   </div>
